snapshots/syntax/library/functions/resources/loadrespicture/loadrespicture_parentheses.snap
---
source: src/syntax/library/functions/resources/loadrespicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: pic
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: LoadResPicture
        - kind: LeftParenthesis
          text: (
        - kind: IntegerLiteral
          text: "101"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: vbResBitmap
        - kind: RightParenthesis
          text: )
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
